# grpo_proj2

./: .gitignore  AGENTS.md  README.md  START.md  justfile  pyproject.toml
docs/: human_journal.md  results.md
docs/blog/: 20260529_gradient_projection_vs_reward_hacking_LW_draft.md
docs/papers/: 2025_ichihara_mo-grpo.md  2025_lw_ariahw_steering-rl-training-benchmarking-interventions.md  2026_wu-tang_when-reward-hacking-rebounds.md  paper_chars.md  paper_obfuscation_atlas.md
docs/papers/grad_routing/: paper_confessions.md  paper_deng_trusted_direction.md  paper_gradient_routing.md  paper_sgtm.md  related_work.md  search_for_more.md
docs/pseudocode/: 01_adapter.py  02_extract_vhack.py  03_project.py  04_rewards.py  05_grpo_loss.py  06_train_loop.py  07_experiment.py  README.md
docs/spec/: 20260531_rebuild.md  20260601_parametrized_lora_adapter.md
scripts/: audit_log.py  results.py
src/projected_grpo/: __init__.py  antipasto.py  build_pool.py  extract_vhack_grad.py  problems.py  proj.py  rewards.py  train.py
